k8s/ingress/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: med-erp-local-ingress
  namespace: med-erp
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /api/v1/organizations
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8082

          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8083

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
